# MetalWarp

./: .gitignore  build.sh  codegen_base.py  codegen_c.py  codegen_metal.py  entry.py  example.dsl  example_metal.dsl  example_standalone.py  interpreter.py  main.py  metal_backend.mm  metal_kernel.py  pyproject.toml  sph_simulation.py
.github/workflows/: tests.yml
docs/: README.md  compiler-design.html  index.html  runtime-design.html
examples/: example_native_metal.py
kernels/: saxpy.metal
metal_runtime/: CMakeLists.txt  bindings.mm  metal_device.h  metal_device.mm  metal_renderer.h  metal_renderer.mm
mycompiler/: __init__.py  __main__.py  codegen_c.py  entry.py  metal_kernel.py
pymetal/: __init__.py  codegen_base.py  codegen_metal.py  sph_simulation.py
tests/: test_codegen_base_inference.py  test_codegen_c_output.py  test_codegen_metal_output.py  test_entry_cli.py  test_interpreter_arithmetic.py  test_interpreter_builtins.py  test_interpreter_control_flow.py  test_interpreter_functions.py  test_metal_kernel_decorator.py  test_runtime_headers.py  test_sph_kernel_contracts.py  test_support.py
